# tabletop-rl

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
src/cpp/: CMakeLists.txt  utils.cpp  utils.h
src/cpp/exploding_kittens/: README.md
src/cpp/exploding_kittens/environment/: action_defs.h  action_type.h  card_collection.cpp  card_collection.h  card_collection.ih  card_defs.h  card_defs.ih  card_hand.cpp  card_hand.h  card_stack.cpp  card_stack.h  cards.cpp  cards.h  game_defs.h  game_state.cpp  game_state.h
src/cpp/exploding_kittens/environment/actions/: action_defs.h  action_template.h  default_action.cpp  default_action.h  draw_card.cpp  draw_card.h  nope_utils.cpp  nope_utils.h  play_defuse.cpp  play_defuse.h  play_nope.cpp  play_nope.h  skip_nope.cpp  skip_nope.h
tests/cpp/: CMakeLists.txt  experiments.cpp
tests/cpp/exploding_kittens/environment/: test_cards.cpp  test_custom_reset.cpp  test_game_state.cpp  testing_utils.cpp  testing_utils.h
tests/cpp/exploding_kittens/environment/actions/: test_default_action.cpp  test_draw_card_action.cpp  test_noping.cpp  test_play_defuse.cpp
